feat(calendar): custom calendar UI

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<div class="flex  items-center h-[84px] w-full">
+    <div class="flex items-center gap-4"><img src="assets/money-bag.svg" alt="logo" class="h-[48px]" />
+        <h2 class="font-mono text-[24px] font-bold">MoneyNote</h2>
+    </div>
+</div>
