--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,1 +1,34 @@
-<p>calendar works!</p>
+<div class="flex flex-col justify-center items-center w-fit">
+    
+    <!-- Render the Header -->
+    <div class="flex justify-between w-full mb-4">
+
+        <h1 class="font-mono text-3xl font-semibold">
+            {{ monthNames[selectedMonth] }} {{ selectedYear }}
+        </h1>
+
+        <div class="flex gap-2">
+            <select [(ngModel)]="selectedMonth" (change)="updateCalendar()"
+                class="w-[128px] h-[40px] rounded-[6px] bg-white border-slate-300 border-[1px] font-mono px-2 appearance-none">
+                <option *ngFor="let month of monthNames; let i = index" [value]="i">{{ month }}</option>
+            </select>
+            <select [(ngModel)]="selectedYear" (change)="updateCalendar()"
+                class="w-[128px] h-[40px] rounded-[6px] bg-white border-slate-300 border-[1px] font-mono px-2 appearance-none">
+                <option *ngFor="let year of yearRange" [value]="year">{{ year }}</option>
+            </select>
+        </div>
+    </div>
+
+    <!-- Render the days of the week -->
+    <div class="grid grid-flow-row p-[1px] grid-cols-7 gap-[1px]">
+        <div *ngFor="let day of dayNames" class="text-end w-[128px] font-mono font-normal text-[12px]">{{ day }}</div>
+    </div>
+
+    <!-- Render the calendar -->
+    <div class="grid grid-flow-row p-[1px] grid-cols-7 bg-slate-200 gap-[1px]">
+        <div *ngFor="let date of dates"
+            class="w-[128px] h-[128px] bg-white flex items-start justify-end p-2 font-mono font-normal text-[12px]">
+            {{ date }}
+        </div>
+    </div>
+</div>
