--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col justify-center items-center">
-  <app-navbar />
-  <app-calendar />
-  <app-add-button />
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+  <app-add-button></app-add-button>
 </div>
