--- a/src/app/date-detail/date-detail.component.html
+++ b/src/app/date-detail/date-detail.component.html
@@ -3,7 +3,15 @@
         <h1 class="font-mono text-3xl font-semibold">
             {{ day }} {{ month }} {{ year }}
         </h1>
-        <button (click)="goBack()" class="py-[6px] px-2 border-[1px] border-slate-300 rounded-md hover:bg-slate-300">Go Back</button>
+        <button (click)="goBack()" class="py-[6px] px-2 border-[1px] border-slate-300 rounded-md hover:bg-slate-300">Go
+            Back</button>
     </div>
-    <div class="w-[880px] h-fit min-h-[624px] border-[1px] border-slate-300"></div>
+    <div class="w-[880px] h-fit min-h-[624px] border-[1px] border-slate-300">
+        <ul>
+            <li *ngFor="let item of getObjectKeys(data)" class="bg-slate-300 text-black w-fit font-mono rounded-full p-1 px-3 m-2">
+              {{ item.key }}: {{ item.value }}
+            </li>
+          </ul>
+    </div>
+    <app-add-button (dataEvent)="handleData($event)" />
 </div>
